Fix stream
Co-authored-by: Carl Christian Snethlage <50491877+calixtus@users.noreply.github.com>